# librefit

./: .gitignore  LICENSE  README.MD  build.gradle.kts  docker-compose.yaml  fly.toml  gradle.properties  keygen.sh  settings.gradle.kts
librefit-api/: .gitignore  build.gradle.kts  generate.sh  openapi.json  openapi.yaml  openapitools.json  package-lock.json  package.json  tsconfig.json
librefit-service/: .gitignore  README.md  build.gradle.kts  fly.toml  generate-keypair.sh  settings.gradle.kts
librefit-web/: .env  .env.dev  .env.production  .eslintignore  .gitignore  .prettierignore  (+14 more)
src-tauri/: .env  .gitignore  .taurignore  Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/locales/: en.yml
src-tauri/migrations/2024-12-04-184150_init/: down.sql  up.sql
src-tauri/migrations/2024-12-05-174159_init/: down.sql  up.sql
src-tauri/res/: import.sql  tracker.db
src-tauri/src/: lib.rs  main.rs
src-tauri/src/calc/: math_f32.rs  mod.rs  wizard.rs
src-tauri/src/crud/: mod.rs
src-tauri/src/crud/cmd/: body.rs  calorie.rs  dashboard.rs  error_handler.rs  mod.rs  user.rs  weight.rs  wizard.rs
src-tauri/src/crud/db/: connection.rs  mod.rs  model.rs  schema.rs
src-tauri/src/crud/db/comp/: dashboard.rs  mod.rs  wizard.rs
src-tauri/src/crud/db/repo/: body.rs  calories.rs  food_category.rs  mod.rs  user.rs  weight.rs
src-tauri/src/crud/serde/: date.rs
src-tauri/src/i18n/: localize.rs  mod.rs
src-tauri/src/init/: db_setup.rs  mod.rs
src-tauri/src/test/: mod.rs  wizard.rs
src-tauri/tests/: wizard.rs
(+312 files in other folders)
